feat(home): remove redundant links

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ description: Personal website for my projects and publications
 
 <div class="row">
 	<p>
-		This is my portfolio of projects and publications. I also write short-form content on my <a href="/blog/">blog</a> about interesting problems I encounter and solve. Find me on <a href="https://github.com/Tooa" target="_blank ">Github</a> and <a href="https://de.linkedin.com/in/ulifahrer" target="_blank ">LinkedIn</a>.
+		This is my portfolio of projects and publications. I also write short-form content on my <a href="/blog/">blog</a> about interesting problems I encounter and solve. If you'd like to connect or have questions about my work, feel free to reach out through any of the links below.
 	</p>
 </div>
 
